# PlantLab

./: .gitignore  README.md  main.py  main.qml  pyproject.toml  qtquickcontrols2.conf  rc_resource.py  resource.qrc
.qtcreator/Python_3_12_3venv/: pyvenv.cfg
UML/: UI_Structure
com/plantlab/controllers/: FileSystemController.qmltypes  FileSystemController_qmltyperegistrations.cpp  FileSystemControllermetatypes.json  qmldir
plantlab/models/: FileSystemController.qmltypes  FileSystemController_qmltyperegistrations.cpp  FileSystemControllermetatypes.json  ModelListModel.qmltypes  ModelListModel_qmltyperegistrations.cpp  ModelListModelmetatypes.json  qmldir
src/core/: FileSystemController.py
src/core/auth/: Auth.py  AuthApiClient.py  AuthService.py
src/core/config/: DBManager.py
src/core/controllers/: DatasetProcessor.py  ExportWorker.py  FileSystemController.py  NormalizationWorker.py
src/core/devices/: DeviceState.py  MQTTClient.py  PNDDevice.py  PNDDeviceConfigurator.py  PNDDeviceModel.py  PNDTopics.py
src/core/model_engineering/: DownloadWorker.py  ModelConverter.py  ModelConverterWorker.py  ModelDeployer.py  ModelDownloader.py  ModelEvaluator.py  ModelListModel.py  ModelScanner.py  ModelTrainer.py  ModelTrainerWorker.py
src/core/processing/: ExportSettings.py  NormalizationSettings.py  ProcessingTask.py
src/core/research/: ApiClient.py  DataService.py  FieldDataExplorer.py  FieldDataset.py  StatisticalAnalyzer.py
src/core/users/: User.py
ui/analysis/: AnalysisPage.qml  AnalysisScreen.qml  DataExplorerPage.qml  Reports.qml
ui/analysis/delegate/: AnalysisNavDelegate.qml
ui/analysis/model/: AnalysisNaveModel.qml
ui/app_shell/: Mainwindow.qml  Sidebar.qml  Statusbar.qml  Topbar.qml
ui/app_shell/delegate/: SideBarDelegate.qml
ui/app_shell/model/: SideBarModel.qml
ui/app_shell/windows/: Infarance.qml  LiveMonitor.qml  Settings.qml
ui/auth/: login_dialog.qml
ui/dashboard/: DashboardPage.qml
ui/dashboard/component/: ChartCard.qml  MetricCard.qml
ui/data/: DataExplorerPage.qml
ui/data/componets/: FileView.qml  PropertySideBar.qml
ui/devices/: DevicesPage.qml
ui/devices/componets/: DeviceManu.qml
ui/devices/delegate/: DeviceDelegate.qml
ui/devices/model/: DeviceModel.qml
ui/models/: Download.qml  Library.qml  ModelsPage.qml  Train.qml  Transform.qml
ui/models/components/: DetailRow.qml  Logs.qml
ui/models/delagete/: AvailableModelDelegate.qml
ui/models/model/: ActionModel.qml  AvailableModel.qml
ui/settings/: Settings.qml
