[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = [
"main.py",
"main.qml",
"resource.qrc",
"src/core/controllers/DatasetProcessor.py",
"src/core/controllers/FileSystemController.py",
"src/core/controllers/__init__.py",
"src/core/devices/PNDDeviceConfigurator.py",
"src/core/devices/__init__.py",
"src/core/model_engineering/ModelConverter.py",
"src/core/model_engineering/ModelDeployer.py",
"src/core/model_engineering/ModelDownloader.py",
"src/core/model_engineering/ModelEvaluator.py",
"src/core/model_engineering/ModelTrainer.py",
"src/core/model_engineering/__init__.py",
"src/core/processing/ExportSettings.py",
"src/core/processing/NormalizationSettings.py",
"src/core/processing/ProcessingTask.py",
"src/core/processing/__init__.py",
"src/core/research/FieldDataExplorer.py",
"src/core/research/StatisticalAnalyzer.py",
"src/core/research/__init__.py",
"ui/analysis/AnalysisPage.qml",
"ui/app_shell/Mainwindow.qml",
"ui/app_shell/Sidebar.qml",
"ui/app_shell/Statusbar.qml",
"ui/app_shell/Topbar.qml",
"ui/app_shell/delegate/SideBarDelegate.qml",
"ui/app_shell/model/SideBarModel.qml",
"ui/app_shell/windows/Infarance.qml",
"ui/app_shell/windows/LiveMonitor.qml",
"ui/app_shell/windows/Settings.qml",
"ui/auth/login_dialog.qml",
"ui/curation/labeling_page.qml",
"ui/dashboard/DashboardPage.qml",
"ui/dashboard/component/ChartCard.qml",
"ui/dashboard/component/MetricCard.qml",
"ui/data/DataExplorerPage.qml",
"ui/data/componets/FileView.qml",
"ui/data/componets/PropertySideBar.qml",
"ui/devices/DevicesPage.qml",
"ui/models/Download.qml",
"ui/models/Library.qml",
"ui/models/ModelsPage.qml",
"ui/models/Train.qml",
"ui/models/Transform.qml",
"ui/models/components/DetailRow.qml",
"ui/models/delagete/ActionDelagate.qml",
"ui/models/delagete/AvailableModelDelegate.qml",
"ui/models/model/ActionModel.qml",
"ui/models/model/AvailableModel.qml",
"ui/settings/Settings.qml",
]
