[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = [
"main.py",
"main.qml",
"resource.qrc",
"src/core/auth/AuthApiClient.py",
"src/core/auth/AuthService.py",
"src/core/config/DBManager.py",
"src/core/controllers/DatasetProcessor.py",
"src/core/controllers/ExportWorker.py",
"src/core/controllers/FileSystemController.py",
"src/core/controllers/NormalizationWorker.py",
"src/core/controllers/__init__.py",
"src/core/devices/DeviceState.py",
"src/core/devices/MQTTClient.py",
"src/core/devices/PNDDevice.py",
"src/core/devices/PNDDeviceConfigurator.py",
"src/core/devices/PNDDeviceModel.py",
"src/core/devices/PNDTopics.py",
"src/core/devices/__init__.py",
"src/core/model_engineering/DownloadWorker.py",
"src/core/model_engineering/ModelConverter.py",
"src/core/model_engineering/ModelConverterWorker.py",
"src/core/model_engineering/ModelDownloader.py",
"src/core/model_engineering/ModelListModel.py",
"src/core/model_engineering/ModelScanner.py",
"src/core/model_engineering/ModelTrainer.py",
"src/core/model_engineering/ModelTrainerWorker.py",
"src/core/model_engineering/__init__.py",
"src/core/research/ApiClient.py",
"src/core/research/DataService.py",
"src/core/research/FieldDataExplorer.py",
"src/core/research/FieldDataset.py",
"src/core/research/StatisticalAnalyzer.py",
"src/core/research/__init__.py",
"src/core/users/User.py",
"ui/analysis/AnalysisPage.qml",
"ui/analysis/AnalysisScreen.qml",
"ui/analysis/DataExplorerPage.qml",
"ui/analysis/Reports.qml",
"ui/analysis/delegate/AnalysisNavDelegate.qml",
"ui/analysis/model/AnalysisNaveModel.qml",
"ui/app_shell/Mainwindow.qml",
"ui/app_shell/Sidebar.qml",
"ui/app_shell/Statusbar.qml",
"ui/app_shell/Topbar.qml",
"ui/app_shell/delegate/SideBarDelegate.qml",
"ui/app_shell/model/SideBarModel.qml",
"ui/app_shell/windows/Infarance.qml",
"ui/app_shell/windows/LiveMonitor.qml",
"ui/app_shell/windows/Settings.qml",
"ui/auth/login_dialog.qml",
"ui/curation/labeling_page.qml",
"ui/dashboard/DashboardPage.qml",
"ui/dashboard/component/ChartCard.qml",
"ui/dashboard/component/MetricCard.qml",
"ui/data/DataExplorerPage.qml",
"ui/data/componets/FileView.qml",
"ui/data/componets/PropertySideBar.qml",
"ui/devices/DevicesPage.qml",
"ui/devices/componets/DeviceManu.qml",
"ui/devices/delegate/DeviceDelegate.qml",
"ui/devices/model/DeviceModel.qml",
"ui/models/Download.qml",
"ui/models/Library.qml",
"ui/models/ModelsPage.qml",
"ui/models/Train.qml",
"ui/models/Transform.qml",
"ui/models/components/DetailRow.qml",
"ui/models/components/Logs.qml",
"ui/models/delagete/ActionDelagate.qml",
"ui/models/delagete/AvailableModelDelegate.qml",
"ui/models/model/ActionModel.qml",
"ui/models/model/AvailableModel.qml",
"ui/settings/Settings.qml",
]
